# crittercam

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  PHASES.md  Procfile.dev  README.md  pyproject.toml
crittercam/: __init__.py  cli.py  config.py
crittercam/classifier/: __init__.py  base.py  speciesnet.py
crittercam/cli/: __init__.py  _geo.py  cmd_build_ui.py  cmd_classify.py  cmd_clean_db.py  cmd_identify.py  cmd_ingest.py  cmd_merge_individuals.py  cmd_migrate_db.py  cmd_name_individual.py  cmd_serve.py  cmd_setup.py  main.py
crittercam/identifier/: __init__.py  base.py  megadescriptor.py
crittercam/pipeline/: __init__.py  classify.py  clean.py  db.py  exif.py  identify.py  ingest.py
crittercam/pipeline/migrations/: 0001_initial_schema.sql  0002_reid_schema.sql
crittercam/web/: __init__.py  server.py
crittercam/web/api/: __init__.py  detections.py  stats.py
crittercam/web/ui/: index.html  package-lock.json  package.json  vite.config.js
design/: DECISIONS.md  DESIGN.md  PHASES.md  STORYBOOK.md  VIDEO.md  WEB.md
tests/: test_cli.py  test_config.py  test_db.py
tests/classifier/: test_speciesnet.py
tests/cli/: test_cmd_build_ui.py  test_cmd_classify.py  test_cmd_clean_db.py  test_cmd_identify.py  test_cmd_ingest.py  test_cmd_merge_individuals.py  test_cmd_name_individual.py  test_cmd_serve.py  test_cmd_setup.py  test_geo.py
tests/identifier/: test_megadescriptor.py
tests/pipeline/: conftest.py  test_classify.py  test_clean.py  test_db.py  test_exif.py  test_identify.py  test_ingest.py
tests/web/api/: conftest.py  (+1 more)
(+36 files in other folders)
