[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "crittercam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "speciesnet",
    "tomli-w",
]

[project.scripts]
crittercam = "crittercam.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crittercam*"]
